--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "django-extensions>=4.1",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
+    "drf-spectacular[sidecar]>=0.28.0",
     "pillow>=11.3.0",
     "psycopg2-binary>=2.9.10",
     "python-decouple>=3.8",
