--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,21 +5,13 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "black>=25.1.0",
     "django>=5.2.6",
-    "django-cors-headers>=4.8.0",
-    "django-extensions>=4.1",
     "djangorestframework>=3.16.1",
     "djangorestframework-simplejwt>=5.5.1",
-    "drf-spectacular[sidecar]>=0.28.0",
-    "pillow>=11.3.0",
+    "isort>=6.0.1",
     "psycopg2-binary>=2.9.10",
-    "python-decouple>=3.8",
-]
-
-[dependency-groups]
-dev = [
-    "black>=25.1.0",
-    "coverage>=7.10.6",
-    "flake8>=7.3.0",
+    "pytest>=8.4.2",
     "pytest-django>=4.11.1",
+    "python-dotenv>=1.1.1",
 ]
